--- a/index.html
+++ b/index.html
@@ -40,20 +40,27 @@
           <div class="numbertext">1 / 3</div>
           <img src="assets/image/persija-1.jpeg" class="featured-image" />
         </div>
-  
+
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
           <img src="assets/image/persija-2.jpeg" class="featured-image" />
         </div>
-  
+
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
           <img src="assets/image/persija-3.jpeg" class="featured-image" />
         </div>
-  
+
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+
+      <!-- The dots/circles -->
+      <div style="text-align: center hidden">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
       </div>
 
       <!--Konten Artikel-->
